# infix

./: .gitattributes  CMakeLists.txt  README.md  dok.html  funkcjeAllegrowe.h  funkcjeGrowe.h  funkcjeallegrowe.h  funkcjegrowe.h  main.c  rzeczy.txt
include/: draw.h  gamestate.h  globals.h  infix.h  operation.h  startup.h  utils.h
src/: draw.c  infix.c  main.c  operation.c  startup.c  utils.c
